--- a/assets/css/_fonts.scss
+++ b/assets/css/_fonts.scss
@@ -12,6 +12,20 @@
        url('/assets/fonts/open-sans-v13-latin-300.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
+/* open-sans-300italic - latin */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 300;
+  src: url('/assets/fonts/open-sans-v13-latin-300italic.eot'); /* IE9 Compat Modes */
+  src: local('Open Sans Light Italic'), local('OpenSansLight-Italic'),
+       url('/assets/fonts/open-sans-v13-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/assets/fonts/open-sans-v13-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/assets/fonts/open-sans-v13-latin-300italic.woff') format('woff'), /* Modern Browsers */
+       url('/assets/fonts/open-sans-v13-latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/assets/fonts/open-sans-v13-latin-300italic.svg#OpenSans') format('svg'); /* Legacy iOS */
+}
+
 /* open-sans-regular - latin */
 @font-face {
   font-family: 'Open Sans';
